argocd/apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: default
  labels:
    app: homer
spec:
  selector:
    app: homer
  ports:
    - name: http
      port: 80
      targetPort: 8080
